--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   role_name: miniconda
-  description: Installs Miniconda on Unix systems
+  description: Installs Miniconda on Unix
   author: Jan-Matthis Lueckmann
   license: MIT
   min_ansible_version: 2.5
